--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.11.2) stable; urgency=low
+
+  * Updated to version 0.11.2
+
+ -- Arvin Schnell <aschnell@suse.com>  Fri, 30 Aug 2024 07:25:01 +0000
+
 snapper (0.11.1) stable; urgency=low
 
   * Updated to version 0.11.1
